<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context="com.example.agentzengyu.zy2048.activity.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#20222222"
            android:gravity="center"
            android:text="@string/game_title"
            android:textSize="20sp"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:typeface="monospace">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#20222222"
                android:gravity="center"
                android:text="@string/game_score"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvScoreGameOver"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#30224466"
                android:gravity="center"
                android:text="0"
                android:textSize="20sp"
                android:typeface="monospace" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#20222222"
                android:gravity="center"
                android:text="@string/game_best"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvBest"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#30224466"
                android:gravity="center"
                android:text="0"
                android:textSize="20sp"
                android:typeface="monospace" />

        </LinearLayout>

    </LinearLayout>

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1"-->
    <!--android:ellipsize="marquee"-->
    <!--android:focusable="true"-->
    <!--android:focusableInTouchMode="true"-->
    <!--android:gravity="center_vertical|start"-->
    <!--android:marqueeRepeatLimit="marquee_forever"-->
    <!--android:scrollHorizontally="true"-->
    <!--android:singleLine="true"-->
    <!--android:text="@string/message_test"-->
    <!--android:textIsSelectable="true" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#00000000"
        android:gravity="center_vertical|start"
        android:text="Message"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:typeface="monospace" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:background="#00000000"
        android:scrollbars="none">

    </android.support.v7.widget.RecyclerView>

    <com.example.agentzengyu.zy2048.view.SquareView
        android:id="@+id/svGame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="10"
        android:background="#00000000" />

</LinearLayout>
